修正index.html中的路径，指向src目录下的文件

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/login.html"></iframe>
+                    <iframe src="src/pages/login.html"></iframe>
                 </div>
             </div>
             <div class="label">1.1 身份激活 (Login)</div>
@@ -89,7 +89,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/questionnaire.html"></iframe>
+                    <iframe src="src/pages/questionnaire.html"></iframe>
                 </div>
             </div>
             <div class="label">1.2 深度评估 (Questionnaire)</div>
@@ -100,7 +100,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/calculating.html"></iframe>
+                    <iframe src="src/pages/calculating.html"></iframe>
                 </div>
             </div>
             <div class="label">1.3 方案定制 (Calculating)</div>
@@ -111,7 +111,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/report.html"></iframe>
+                    <iframe src="src/pages/report.html"></iframe>
                 </div>
             </div>
             <div class="label">1.4 健康报告封面 (Report)</div>
@@ -122,7 +122,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/report-detail.html"></iframe>
+                    <iframe src="src/pages/report-detail.html"></iframe>
                 </div>
             </div>
             <div class="label">1.5 详细报告 (Report Detail)</div>
@@ -133,7 +133,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/home.html"></iframe>
+                    <iframe src="src/pages/home.html"></iframe>
                 </div>
             </div>
             <div class="label">2.1 今日 (Home)</div>
@@ -144,7 +144,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/plan.html"></iframe>
+                    <iframe src="src/pages/plan.html"></iframe>
                 </div>
             </div>
             <div class="label">2.2 计划 (Plan)</div>
@@ -155,7 +155,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/wiki.html"></iframe>
+                    <iframe src="src/pages/wiki.html"></iframe>
                 </div>
             </div>
             <div class="label">2.3 百科 (Wiki)</div>
@@ -166,7 +166,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/profile.html"></iframe>
+                    <iframe src="src/pages/profile.html"></iframe>
                 </div>
             </div>
             <div class="label">2.4 我的 (Profile)</div>
@@ -177,7 +177,7 @@
             <div class="iphone-frame">
                 <div class="dynamic-island"></div>
                 <div class="screen-content">
-                    <iframe src="pages/service-preferences.html"></iframe>
+                    <iframe src="src/pages/service-preferences.html"></iframe>
                 </div>
             </div>
             <div class="label">2.5 服务偏好设置 (Service Preferences)</div>
